kubernetes/apps/youtinerary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: youtinerary
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
