kubernetes/apps/youtinerary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtinerary-ingress
  namespace: youtinerary
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: "external"
  rules:
    - host: &host youtinerary.${SECRET_DOMAIN}
      http:
        paths:
          - path: /api/v0/itineraries
            pathType: Prefix
            backend:
              service:
                name: create-itinerary
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: youtinerary-tls
